--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 5005
-AWS_ACCESS_KEY=AKIARFGVU7TV7Q6T6S6X
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY=
+AWS_SECRET_ACCESS_KEY=
 AWSRegion=us-east-1
